samples/_failures_safe/1761454257_523cdf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_441f1d8b.c: In function ‘main’:
./samples/SAFE/__tmp_441f1d8b.c:127:5: error: expected expression at end of input
  127 |     while (running)
      |     ^~~~~
./samples/SAFE/__tmp_441f1d8b.c:127:5: error: expected declaration or statement at end of input
